Save TableView settings
- General interface and class to store/load tableeview settings
- bugfix for not loaded marker icons