@@ -46,13 +46,13 @@ repositories {
 
 dependencies {
     // JavaFX11 explicit dependencies
-    compile "org.openjfx:javafx-base:11.0.1:$platform"
-    compile "org.openjfx:javafx-graphics:11.0.1:$platform"
-    compile "org.openjfx:javafx-controls:11.0.1:$platform"
-    compile "org.openjfx:javafx-fxml:11.0.1:$platform"
-    compile "org.openjfx:javafx-swing:11.0.1:$platform"
-    compile "org.openjfx:javafx-web:11.0.1:$platform"
-    compile "org.openjfx:javafx-media:11.0.1:$platform"
+    compile "org.openjfx:javafx-base:11.0.2:$platform"
+    compile "org.openjfx:javafx-graphics:11.0.2:$platform"
+    compile "org.openjfx:javafx-controls:11.0.2:$platform"
+    compile "org.openjfx:javafx-fxml:11.0.2:$platform"
+    compile "org.openjfx:javafx-swing:11.0.2:$platform"
+    compile "org.openjfx:javafx-web:11.0.2:$platform"
+    compile "org.openjfx:javafx-media:11.0.2:$platform"
     
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.12'
@@ -98,6 +98,7 @@ def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,ja
                 '--add-exports', 'javafx.base/com.sun.javafx.logging=ALL-UNNAMED',
                 '--add-exports', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
                 '--add-exports', 'javafx.base/com.sun.javafx.collections=ALL-UNNAMED',
+                '--add-exports', 'javafx.base/com.sun.javafx.event=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.prism=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
